--- a/gb/25/1/10/n14410310.md
+++ b/gb/25/1/10/n14410310.md
@@ -22,37 +22,39 @@
 <p>第五届醒吾三立影视学院成果展圆满落幕，充分展现学生的学习成果。透过专业师资的指导与实战经验的积累，将学校与市场的资源结合，实现与业界的产学合作。课程与实作机会，助力学子朝影视表演领域迈进，成就更璀璨的未来。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/9/18/n12412391.md#1">圆星梦醒吾三立影视学院开课 学生充满期待</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/5/12/n13734031.md#1">醒吾三立影视学院 三立年度大戏两学员担要角</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/12/30/n13895052.md#1">醒吾三立影视“约定” 探讨父女亲情赚人热泪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/12/n14156387.md#1">影视学院赛 MV翻唱《好想爱这个世界啊》夺冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405004.md#1">醒吾表演艺术系勇闯BL剧世界 开拓未来职涯新视野</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410366.md#1">桃市8区橙灯低温特报 启动跨局处防寒应变机制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409683.md#1">再获教育部USR补助 长庚科大导入AI 实践社会责任</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409679.md#1">乐生医院玉山银拓展绿能永续行动 落实永续行动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409670.md#1">消防局新坡分队强化救灾 为新兴能源做好万全准备</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14409657.md#1">桃园资深前立委林正峰辞世 热忱霸气长留选民心中</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/8/n9937008.md#1" target="_blank">陈益南：怵目惊心！1951年的“镇反”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/23/n9661042.md#1" target="_blank">修大法顽疾遁无形 做好人春风化雨润无声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/23/n10165368.md#1" target="_blank">赵刚：穿制服的思想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/5/n10764174.md#1">黄天荡大捷 万人敌韩世忠的忠勇故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396978.md#1">【杨延昭传奇】杨宗保初遇穆桂英（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405635.md#1">【未解之谜】地球在燃烧 濒死中感受神的悲伤</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/7/n14366092.md#1">姜子牙的苦中之苦</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409338.md#1">【新闻欣视角】俄乌战争 朝鲜渔翁得利？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14409217.md#1">【佳音时刻】寒潮袭美南 南加州火灾威胁升级</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14410050.md#1">【佳音时刻】洛杉矶火灾失控 明星豪宅也成废墟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408418.md#1">裘莉离婚获8千万美元分手费 彼特心声曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408691.md#1">开发商掀“退地潮” 中国楼市游戏规则生变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408393.md#1">大陆知名乐队买服装表演后退货 造型师发文道歉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407645.md#1">名下大陆公司全注销 吴奇隆退出所有关联企业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407605.md#1">大陆顶流男星鹿晗三大社交账号均被禁止关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/6/n14407570.md#1">中国演员王星赴泰拍戏 被载往泰缅边境后失联</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405818.md#1">脾胃伤 百病生 中医授三大招健脾养胃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405658.md#1">女性按两穴 护眼变年轻 三穴别按有风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14407855.md#1">加州州长发布行政令调查超加工食品</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14407937.md#1">为什么人们会怕黑？应该如何克服？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14405657.md#1">痔疮反反复复 中医调理助你彻底摆脱痛苦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/10/n14410310.htm">醒吾三立影视学院颜湘孟演活男生桥段精彩夺冠</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410310.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
